deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    workload.user.cattle.io/workloadselector: deployment-acessibilidade-shiny-acessibilidade
  name: shiny-acessibilidade
  namespace: atlasacessibilidade
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-acessibilidade-shiny-acessibilidade
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-acessibilidade-shiny-acessibilidade
    spec:
      containers:
      - image: docker-registry.ipea.gov.br/shiny/atlasacessibilidade:latest
        imagePullPolicy: Always
        name: shiny-acessibilidade
        ports:
        - containerPort: 3838
          name: 3838tcp02
          protocol: TCP
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - mountPath: /root/.Renviron
          name: vol4
          subPath: .Renviron
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 416
          name: renviron
          optional: false
        name: vol4
---
apiVersion: v1
kind: Service
metadata:
  name: shiny-acessibilidade
  namespace: atlasacessibilidade
spec:
  ports:
  - name: 3838tcp02
    port: 3838
    protocol: TCP
    targetPort: 3838
  selector:
    workload.user.cattle.io/workloadselector: deployment-acessibilidade-shiny-acessibilidade
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: balanced
  name: shiny-acessibilidade
  namespace: atlasacessibilidade
spec:
  rules:
  - host: shiny-acessibilidade.ipea.gov.br
    http:
      paths:
      - backend:
          serviceName: shiny-acessibilidade
          servicePort: 3838
  tls:
  - hosts:
    - shiny-acessibilidade.ipea.gov.br
    secretName: ipea-star-certificate
